samples/_failures_safe/1761529073_ae6814_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38267cb8.c: In function ‘main’:
./samples/SAFE/__tmp_38267cb8.c:162:5: error: expected declaration or statement at end of input
  162 |     printf("Original: ");
      |     ^~~~~~
